--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -61,7 +61,7 @@ averages <- data.frame (
         "median"
     ),
     Value = c (
-        round(mean(stepsPerDay, na.rm = TRUE), 2),
+        mean(stepsPerDay, na.rm = TRUE),
         median(stepsPerDay, na.rm = TRUE)
     )
 )
@@ -159,19 +159,19 @@ par(mfcol = c(1, 2))
 hist (
     stepsPerDay,
     main = "Original data",
-    xlab = "steps per day",
+    xlab = "Steps per Day",
     ylim = c(0, 35)
 )
 hist (
     stepsPerDayImputed,
     main = "Imputed data",
-    xlab = "steps per day",
+    xlab = "Steps per Day",
     ylim = c(0, 35)
 )
 ```
 
 Both plots look quite simmilar, except the middle chunk which has a higher
-frequency for the imputed dataset. The mean and median total number of steps
+frequency in the imputed dataset. The mean and median total number of steps
 taken per day for the imputed dataset is calculated and compared to the
 averages of the original dataset as follows.
 
@@ -183,7 +183,7 @@ averagesImputed <- data.frame (
     ),
     Value.Original = averages$Value,
     Value.Imputed = c (
-        round(mean(stepsPerDayImputed, na.rm = TRUE), 2),
+        mean(stepsPerDayImputed, na.rm = TRUE),
         median(stepsPerDayImputed, na.rm = TRUE)
     )
 )
@@ -197,3 +197,42 @@ happens to be the same as the mean.
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+In order to make date functions (like weekdays()) return the same values
+regardless of the locality they are called in the locale is set to en_US.UTF-8.
+
+```{r}
+Sys.setlocale("LC_ALL", "en_US.UTF-8")
+```
+
+Now a new factor variable typeOfDay can be created in the imputed dataset. It
+contains two levels: weekday and weekend.
+
+```{r}
+imputedActivities$typeOfDay <- sapply (
+    X   = imputedActivities$date,
+    FUN = function(x) {
+        if (weekdays(x, abbreviate = TRUE) %in% c("Sat", "Sun"))
+            "weekend"
+        else
+            "weekday"
+    }
+)
+imputedActivities$typeOfDay <- as.factor(imputedActivities$typeOfDay)
+str(imputedActivities)
+```
+
+The following figure displays two time series plots of the 5-minute interval and
+the mean number of steps averaged across the type of day.
+
+```{r}
+library(ggplot2)
+meansPerIntervalAndTypeOfDay <- aggregate (
+    formula = steps ~ interval + typeOfDay,
+    data    = imputedActivities,
+    FUN     = mean
+)
+g <- ggplot(meansPerIntervalAndTypeOfDay) + aes(interval, steps) + geom_line()
+g <- g + facet_grid(typeOfDay ~ .) + xlab("Interval") + ylab("Number of Steps")
+print(g)
+```
